# syncsparkpy

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo_emr.sh  makefile  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docs.yml  pull-request.yml  release.yml
demo/: install_cli.sh
demo/emr/: application_1678162862227_0001  emr-config.json
docs/: conf.py  index.rst
docs/_templates/: .gitignore
docs/guide/: glossary.rst  project.rst  start.rst
docs/reference/: api.rst  awsdatabricks.rst  awsemr.rst  azuredatabricks.rst  emr.rst  project.rst
docs/reference/api/: predictions.rst  projects.rst
examples/databricks/airflow/: run_submit_example.py
sync/: __init__.py  __main__.py  _databricks.py  api.py  asyncawsemr.py  auth.py  awsdatabricks.py  awsemr.py  azuredatabricks.py  cli.py  client.py  config.py  databricks.py  emr.py  errors.py  models.py  prediction.py  project.py  projects.py  state.py
sync/_async/: predictions.py
sync/api/: __init__.py  predictions.py  projects.py  workspace.py
sync/asyncapi/: predictions.py
sync/cli/: __init__.py  _databricks.py  awsdatabricks.py  awsemr.py  azuredatabricks.py  cli_settings.py  databricks.py  emr.py  predictions.py  profiles.py  projects.py  util.py  workspaces.py
sync/clients/: __init__.py  cache.py  databricks.py  sync.py
sync/databricks/integrations/: _run_submit_runner.py  airflow.py
sync/nosync/: prediction.py
sync/utils/: dbfs.py  json.py
tests/: test_api.py  test_awsdatabricks.py  test_awsemr.py  test_config.py  test_projects.py
tests/api/: test_predictions.py
tests/asyncapi/: test_asyncpredictions.py
tests/clients/: test_sync.py
tests/data/: emr-cluster-report.json  predictions_response.json
tests/test_files/: aws_cluster.json  aws_recommendation.json  azure_cluster.json  azure_recommendation.json  cluster.json  recommendation.json
