[build-system]
# NOTE - versions of Hatchling more recent than 1.8.0 have a dependency on pathspec >= 0.10.1. However,
#  Databricks Runtime versions only have pathspec==0.9.0 installed, and so attempting to `pip install ...`
#  syncsparkpy will fail with an `AttributeError`. Pinning Hatching to this version, which is the most
#  recent version to only require pathspec >= 0.9.0, resolves that issue without asking the user to
#  install pathspec >= 0.10.1 on their Databricks clusters. We should only ever upgrade this version once
#  most/all Databricks Runtime LTS releases support pathspec >= 0.10.1, which may be a while...
# See here for DBR release notes - https://docs.databricks.com/release-notes/runtime/releases.html
requires = ["hatchling==1.8.0"]
build-backend = "hatchling.build"

[project]
name = "syncsparkpy"
authors = [{ "name" = "Sync Computing" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "boto3~=1.26.0",
    "pydantic~=2.6.3",
    "pydantic-settings~=2.2.1",
    "pydantic_core~=2.16.3",
    "httpx~=0.27.0",
    "click~=8.1.7",
    "tenacity==8.2.2",
    "azure-identity==1.13.0",
    "azure-mgmt-compute==30.1.0",
    "azure-mgmt-resource==23.0.1",
    "azure-cli-core==2.50.0"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "flake8==7.0.0",
    "isort==5.13.3",
    "pytest==8.0.0",
    "pytest-mock-3.12.0",
    "pytest-env==0.8.1",
    "pytest-asyncio==0.21.0",
    "Sphinx==4.3.0",
    "respx==0.20.2",
    "deepdiff==6.3.0",
]

[tool.hatch.version]
path = "sync/__init__.py"

[project.scripts]
sync-cli = "sync.__main__:main"

[project.urls]
Home = "https://github.com/synccomputingcode/syncsparkpy"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
pythonpath = [
    "."
]
filterwarnings = [
    "ignore::UserWarning"
]
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "SYNC_API_KEY_ID=fake",
    "SYNC_API_KEY_SECRET=fake",
]
