[build-system]
# NOTE - versions of Hatchling more recent than 1.8.0 have a dependency on pathspec >= 0.10.1. However,
#  Databricks Runtime versions only have pathspec==0.9.0 installed, and so attempting to `pip install ...`
#  syncsparkpy will fail with an `AttributeError`. Pinning Hatching to this version, which is the most
#  recent version to only require pathspec >= 0.9.0, resolves that issue without asking the user to
#  install pathspec >= 0.10.1 on their Databricks clusters. We should only ever upgrade this version once
#  most/all Databricks Runtime LTS releases support pathspec >= 0.10.1, which may be a while...
# See here for DBR release notes - https://docs.databricks.com/release-notes/runtime/releases.html
build-backend = "hatchling.build"
requires = ["hatchling==1.8.0"]

[project]
authors = [{ "name" = "Sync Computing" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
]
dependencies = [
    "azure-cli-core==2.50.0",
    "azure-identity==1.13.0",
    "azure-mgmt-compute==30.1.0",
    "azure-mgmt-resource==23.0.1",
    "boto3>=1.26.0,<2.0.0",
    "click~=8.1.0",
    "httpx~=0.23",
    "platformdirs",
    "pydantic~=1.10.0",
    "python-dateutil>=2.7,<3",
    "tenacity==8.2.2",
]
dynamic = ["description", "version"]
name = "syncsparkpy"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
dev = [
    "Sphinx==4.3.0",
    "deepdiff==6.3.0",
    "pytest-asyncio==0.21.0",
    "pytest-env==0.8.1",
    "pytest==7.2.0",
    "respx==0.20.1",
    "ruff==0.7.2",
]

[tool.hatch.version]
path = "sync/__init__.py"

[project.scripts]
sync-cli = "sync.__main__:main"

[project.urls]
Home = "https://github.com/synccomputingcode/syncsparkpy"

[tool.pytest.ini_options]
env = [
    "AWS_DEFAULT_REGION=us-east-1",
    "SYNC_API_KEY_ID=fake",
    "SYNC_API_KEY_SECRET=fake",
]
filterwarnings = ["ignore::UserWarning"]
pythonpath = ["."]


[tool.ruff]
exclude = ["artifacts/*"]
line-length = 100
target-version = "py37"
[tool.ruff.lint]
ignore = ["E501"]
preview = true
select = ["ASYNC", "B", "C9", "E", "F", "I", "PLE", "RUF", "TID", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    # Whitelisted default arguments
    "Security",
    "Tracker",
    "app.api.deps.Tracker",
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Security",
]
[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.pyright]
pythonPlatform = "All"
pythonVersion = "3.7"
reportUnnecessaryTypeIgnoreComment = "error"
typeCheckingMode = "standard"
useLibraryCodeForTypes = false
